@@ -8,6 +8,7 @@
 - Deprecate ConfigurationModule.installModules.
 - Deprecate ConditionalModule.installModuleIf and introduce
   ConditionalModule.conditionalModule.
+- Remove support for joda-time from event module.
 - Migrate to ListenableFuture<Void> for future signaling.
 
 206
